button gap correction

--- a/style.css
+++ b/style.css
@@ -131,6 +131,9 @@ input{
     background-color: rgba(128, 128, 128, 0.277);
     border: none;
 }
+.email-sec a{
+    margin-left: -2%;
+}
 
 .background{
     background-color: rgba(222, 184, 135, 0.307);
